<resources>
    <string name="app_name">TuneDaily</string>

    <!--HomeFragment-->
    <string name="top_chart">TOP CHART</string>
    <string name="popular_albums">POPULAR ALBUMS</string>
    <string name="best_of_artists">BEST OF ARTISTS</string>

    <!--Settings-->
    <string name="settings">SETTINGS</string>
    <string name="theme">Theme</string>
    <string name="language">Language</string>
    <string name="vietnamese">Vietnamese</string>
    <string name="english">English</string>
    <string name="isDarkTheme">isDarkTheme</string>
    <string name="isEnglish">isEnglish</string>

    <!--BottomNavigationIcon-->
    <string name="discover_menu">Discover</string>
    <string name="search_menu">Search</string>
    <string name="library_menu">Library</string>

    <!--SearchFragment-->
    <string name="artist_songs_or_album">Artist, songs or playlist</string>
    <string name="random_artists">RANDOM ARTISTS</string>
    <string name="random_songs">RANDOM SONGS</string>
    <string name="search">Search</string>

    <!--LibraryActivity-->
    <string name="library_header">LIBRARY</string>
    <string name="liked_songs">Liked Songs</string>
    <string name="liked_songs_uppercase">LIKED SONGS</string>
    <string name="create_new_playlist">Create new playlist</string>

    <!--LyricFragment-->
    <string name="song_lyric">Song: </string>
    <string name="artist">Artist: </string>
    <string name="fake_lyric">Nơi tin yêu nhiệm màu\n
Từng nụ hôn trao như tình đầu\n
Anh đưa tay nguyện cầu\n
Gửi về em tiếng ca chân thành.\n
(rất chân thành)\n
Xa, em như cây lìa cành\n
Thương, em nắng mưa cũng đành\n
Dù chỉ là ngày chờ đêm trông\n
Baby can you feel me?\n
\n
Có ước muốn thân ta tan theo gió\n
Kéo bước theo anh rong chơi\n
Có ước muốn ngôi sao trong đêm tối\n
Rẽ lối bên anh khắp nơi\n
Có ước muốn\n
Anh chôn sâu\n
Những nỗi nhớ\n
Tan đi đâu\n
Tàn theo những giấc mơ hững hờ\n
(Cần gì hơn khi đã có em\n
Cần gì hơn, babe\n
Cần gì hơn) x 4\n
I see you there, I see you everywhere\n
In my mind even in my dreams\n
Who loves you, sorry i dont care\n
Cause I know who is in your heart.\n
Chim muông bay, tìm ngọt ngào từ mưa giông\n
Cho đêm nay, đừng dài hơn những nhớ mong\n
Giữ lấy ngón tay đan vào nhau, ai biết mai về sau,\n
anh với em còn không?\n
Có ước muốn thân ta tan theo gió\n
Kéo bước theo anh rong chơi\n
Có ước muốn ngôi sao trong đêm tối\n
Rẽ lối bên anh khắp nơi\n
Có ước muốn\n
Anh chôn sâu\n
Những nỗi nhớ\n
Tan đi đâu\n
Tàn theo những giấc mơ hững hờ\n
(Cần gì hơn khi đã có em\n
Cần gì hơn, babe\n
Cần gì hơn) x 4\n
\n
Đã có anh cần gì hơn\n
Đã có em cần gì hơn\n
Đã có nhau ta cần gì hơn?\n
..... x2\n
(Cần gì hơn khi đã có em\n
Cần gì hơn, babe\n
Cần gì hơn) x 4\n</string>

    <!--DetailFragment-->
    <string name="song_detail">Song</string>
    <string name="album_detail">Album</string>
    <string name="artist_detail">Artist</string>
    <string name="genre_detail">Genre</string>
    <string name="composer_detail">Composer</string>
    <string name="similar_songs">SIMILAR SONGS</string>
    <string name="play">PLAY</string>
    <string name="shuffle_play">SHUFFLE PLAY</string>

    <!--SearchActivity-->
    <string name="search_here">Search here</string>
    <string name="artists">ARTISTS</string>
    <string name="songs">SONGS</string>

    <!--More-->
    <string name="add_to_liked_songs">Add to liked songs</string>
    <string name="add_all_to_library">Add all to library</string>
    <string name="add_to_playlist">Add to playlist</string>
    <string name="add_all_to_playlist">Add all to playlist</string>
    <string name="download">Download</string>
    <string name="download_playlist">Select songs to download</string>
    <string name="play_as_broadcast">Play as Broadcast</string>
    <string name="name_here">Name here</string>
    <string name="songs_playlist"> songs</string>
    <string name="this_playlist_is_empty">This playlist is empty.</string>
    <string name="your_results_will_be_shown_here">Your results will be shown here.</string>
    <string name="found_0_result">Found 0 result.</string>
    <string name="songs_library"> songs</string>
    <string name="playlist_name">Playlist Name</string>
    <string name="create">Create</string>
    <string name="cancel">Cancel</string>
    <string name="sign_out">Sign Out</string>
    <string name="do_you_want_to_sign_out">Do you want to sign out?</string>
    <string name="delete_this_playlist">Delete this playlist</string>
    <string name="confirm_delete_playlist">Do you want to delete this playlist?</string>
    <string name="delete">Delete</string>
</resources>
