<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".fragments.TrackMoreFragment"
    android:id="@+id/root_view"
    style="@style/AppModalStyle"
    android:paddingBottom="20dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp">

        <com.albertkhang.tunedaily.views.RoundImageView
            android:id="@+id/imgCover"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:src="@color/colorLight5"
            app:layout_constraintBottom_toBottomOf="parent"

            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txtTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="playList"
            android:layout_marginLeft="12dp"
            style="@style/TitlePlaylistMore"

            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/imgCover"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="7dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp">

        <ImageView
            android:id="@+id/imgLibrary"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_not_favourite"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txtLibrary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_all_to_library"
            android:textColor="@color/colorLight1"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/imgLibrary"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="7dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp">

        <ImageView
            android:id="@+id/imgPlaylist"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_add_playlist"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txtPlaylist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_all_to_playlist"
            android:textColor="@color/colorLight1"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/imgPlaylist"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="7dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp">

        <ImageView
            android:id="@+id/imgDownload"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_download"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txtDownload"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/download_playlist"
            android:textColor="@color/colorLight1"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/imgDownload"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="7dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:visibility="gone">

        <ImageView
            android:id="@+id/imgBroadcast"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_broadcast"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txtBroadcast"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/play_as_broadcast"
            android:textColor="@color/colorLight1"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/imgBroadcast"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/delete_playlist_frame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="7dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp">

        <ImageView
            android:id="@+id/imgDeletePlaylist"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_delete"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txtDeletePlaylist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete_this_playlist"
            android:textColor="@color/colorLight1"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/imgDeletePlaylist"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>