<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.InSearchActivity"
    android:background="@color/colorDark1"
    android:id="@+id/root_view">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/top_frame"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimenTopBackgroundHeight"
        android:background="@color/colorDark2"
        android:clickable="true"

        android:layout_alignParentTop="true">

        <ImageView
            android:id="@+id/imgCollapse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_collapse"

            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginLeft="6dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="3dp"/>

        <EditText
            android:id="@+id/txtSearchText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/search_here"
            android:textColorHint="@color/colorLight5"
            android:textColor="@color/colorLight1"
            android:backgroundTint="@color/colorLight5"
            android:maxLines="1"
            android:minLines="1"
            android:lines="1"
            android:maxEms="100"
            android:singleLine="true"
            android:imeOptions="actionDone"
            style="@style/editText"

            app:layout_constraintTop_toTopOf="@id/imgCollapse"
            app:layout_constraintBottom_toBottomOf="@id/imgCollapse"
            app:layout_constraintLeft_toRightOf="@id/imgCollapse"
            android:layout_marginLeft="5dp"
            app:layout_constraintRight_toLeftOf="@id/imgClear"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="8dp"/>

        <ImageView
            android:id="@+id/imgClear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_close"
            android:visibility="gone"

            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="5dp"
            app:layout_constraintRight_toRightOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/top_frame"
        android:layout_alignParentBottom="true"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/dimenPaddingBottomEnd"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/artist_frame"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="30dp"
                android:visibility="visible">

                <TextView
                    android:id="@+id/txtArtist"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/ListHeader"
                    android:text="@string/artists"
                    android:layout_marginLeft="20dp"/>

                <com.facebook.shimmer.ShimmerFrameLayout
                    android:id="@+id/shimmer_artists"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimenMarginUnderListHeader"
                    shimmer_duration="@integer/integerShimmerDuration"
                    android:layout_marginLeft="10dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <include layout="@layout/item_shimmer_album"/>
                        <include layout="@layout/item_shimmer_album"/>
                        <include layout="@layout/item_shimmer_album"/>
                        <include layout="@layout/item_shimmer_album"/>
                    </LinearLayout>
                </com.facebook.shimmer.ShimmerFrameLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvArtist"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimenMarginUnderListHeader"
                    android:visibility="gone"
                    android:layout_marginLeft="10dp"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/songs_frame"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimenPaddingBetweenFrame"
                android:orientation="vertical"
                android:visibility="visible">

                <TextView
                    android:id="@+id/txtSongs"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/ListHeader"
                    android:text="@string/songs"
                    android:layout_marginLeft="20dp"/>

                <com.facebook.shimmer.ShimmerFrameLayout
                    android:id="@+id/shimmer_songs"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:layout_marginTop="@dimen/dimenMarginUnderListHeader"
                    shimmer_duration="@integer/integerShimmerDuration"
                    android:layout_marginLeft="20dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <include layout="@layout/item_shimmer_list"/>
                        <include layout="@layout/item_shimmer_list"/>
                        <include layout="@layout/item_shimmer_list"/>
                        <include layout="@layout/item_shimmer_list"/>
                        <include layout="@layout/item_shimmer_list"/>
                        <include layout="@layout/item_shimmer_list"/>
                    </LinearLayout>
                </com.facebook.shimmer.ShimmerFrameLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvTracks"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimenMarginUnderListHeader"
                    android:visibility="gone"
                    android:layout_marginLeft="20dp"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/txtResultStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/top_frame"
        style="@style/ListHeader"
        android:text="@string/your_results_will_be_shown_here"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="30dp"
        android:visibility="visible"/>

</RelativeLayout>